--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,22 +1,16 @@
 buildscript {
+    ext.kotlin_version = '2.1.0'
     repositories {
         google()
         mavenCentral()
     }
 
     dependencies {
-        // Mise à jour de la version de l'Android Gradle Plugin à la version 7.4.0 ou plus récente
-        classpath 'com.android.tools.build:gradle:7.4.0'
-
-        // Mise à jour de la version de Kotlin Gradle Plugin à une version compatible
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.7.21"
-
-        // Plugin Google services
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath 'com.android.tools.build:gradle:8.5.0'
         classpath 'com.google.gms:google-services:4.4.2'
     }
 }
-
-
 
 allprojects {
     repositories {
