--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -28,14 +28,11 @@ if (keystorePropertiesFile.exists()) {
 }
 
 apply plugin: 'com.android.application'
-// START: FlutterFire Configuration
-apply plugin: 'com.google.gms.google-services'
-// END: FlutterFire Configuration
 apply plugin: 'kotlin-android'
 apply from: "$flutterRoot/packages/flutter_tools/gradle/flutter.gradle"
 
 android {
-    namespace "com.devmeup.fab_dracailles"
+    namespace "com.devmeup.my_alarms"
     compileSdk = flutter.compileSdkVersion
     ndkVersion "27.2.12479018"
 
@@ -55,7 +52,7 @@ android {
 
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId "com.devmeup.fab_dracailles"
+        applicationId "com.devmeup.my_alarms"
         // You can update the following values to match your application needs.
         // For more information, see: https://docs.flutter.dev/deployment/android#reviewing-the-build-configuration.
         minSdkVersion 23
@@ -85,8 +82,4 @@ flutter {
 
 dependencies {
     implementation 'com.google.android.material:material:1.6.1'
-
-    implementation platform('com.google.firebase:firebase-bom:33.6.0')
-    implementation 'com.google.firebase:firebase-analytics'
-    coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:1.2.2'
 }
