--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
-name: 'fab_dracailles'
-description: 'Les Dracailles FaB'
+name: 'my_alarms'
+description: 'Mes Alarmes'
 publish_to: 'none'
 version: 0.0.6+1
 
@@ -28,14 +28,12 @@ dependencies:
   path_provider: ^2.1.3
   responsive_grid: ^2.4.4
   shared_preferences: ^2.2.2
-  url_launcher: ^6.3.0
   provider: ^6.0.5
-  cloud_firestore: ^5.5.0
-  firebase_auth: ^5.3.3
-  flutter_local_notifications: ^18.0.1
-  firebase_core: ^3.8.0
   geolocator: ^13.0.1
   local_auth: ^2.2.0
+  alarm: ^4.1.1
+  permission_handler: ^11.3.1
+  url_launcher: ^6.3.1
 
 dev_dependencies:
   flutter_launcher_icons: ^0.13.1
@@ -49,20 +47,4 @@ flutter:
   assets:
     - assets/i18n/
     - assets/images/
-
-flutter_launcher_icons:
-  android: 'launcher_icon'
-  ios: true
-  adaptive_icon_background: '#FFFFFF'
-  image_path: 'assets/images/logo_dracailles_min.png'
-
-flutter_native_splash:
-  color: '#ffffff'
-  color_dark: '#121212'
-  image: assets/images/logo_dracailles_min.png
-
-  android_12:
-    image: assets/images/logo_dracailles_min.png
-    icon_background_color: '#ffffff'
-
-  web: false
+    - assets/musics/
