--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,9 +34,9 @@ dependencies:
   alarm: ^4.1.1
   permission_handler: ^11.3.1
   url_launcher: ^6.3.1
+  flutter_launcher_icons: ^0.14.2
 
 dev_dependencies:
-  flutter_launcher_icons: ^0.14.2
   flutter_lints: ^5.0.0
   flutter_test:
     sdk: flutter
@@ -48,3 +48,19 @@ flutter:
     - assets/i18n/
     - assets/images/
     - assets/musics/
+
+flutter_launcher_icons:
+  android: 'launcher_icon'
+  ios: true
+  remove_alpha_ios: true
+  image_path: 'assets/images/my_alarm_icon.png'
+  min_sdk_android: 24
+  adaptive_icon_background: '#ffffff'
+  adaptive_icon_foreground: 'assets/images/my_alarm_icon.png'
+
+flutter_native_splash:
+  image: assets/images/my_alarm_icon.png
+  color: '#ffffff'
+  android: true
+  ios: true
+  web: false
