--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   permission_handler: ^11.3.1
   url_launcher: ^6.3.1
   flutter_launcher_icons: ^0.14.2
+  audioplayers: ^6.1.0
 
 dev_dependencies:
   flutter_lints: ^5.0.0
