--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   url_launcher: ^6.3.1
   flutter_launcher_icons: ^0.14.2
   audioplayers: ^6.1.0
+  volume_controller: ^2.0.8
 
 dev_dependencies:
   flutter_lints: ^5.0.0
