--- a/android/.gitignore
+++ b/android/.gitignore
@@ -7,7 +7,9 @@ gradle-wrapper.jar
 GeneratedPluginRegistrant.java
 
 # Remember to never publicly share your keystore.
-# See https://flutter.dev/to/reference-keystore
+# See https://flutter.dev/docs/deployment/android#reference-the-keystore-from-the-app
 key.properties
 **/*.keystore
 **/*.jks
+**/*.bin
+/app/.cxx/
