--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: 'my_alarms'
 description: 'Mes Alarmes'
 publish_to: 'none'
-version: 0.0.6+1
+version: 0.1.0+1
 
 environment:
   sdk: '>=3.2.2 <4.0.0'
@@ -14,15 +14,12 @@ dependencies:
   flag: ^7.0.0
   flutter:
     sdk: flutter
-  flutter_bloc: ^8.1.4
+  flutter_bloc: ^9.1.0
   flutter_i18n: ^0.36.2
   flutter_localizations:
     sdk: flutter
-  flutter_native_splash: ^2.4.1
-  flutter_secure_storage: ^9.2.2
+  flutter_secure_storage: ^9.2.4
   google_fonts: ^6.2.1
-  intl: ^0.19.0
-  motion_tab_bar: ^2.0.4
   package_info_plus: ^8.0.2
   path: ^1.9.0
   path_provider: ^2.1.3
@@ -32,7 +29,7 @@ dependencies:
   geolocator: ^13.0.1
   local_auth: ^2.2.0
   alarm: ^4.1.1
-  permission_handler: ^11.3.1
+  permission_handler: ^11.4.0
   url_launcher: ^6.3.1
   flutter_launcher_icons: ^0.14.2
   audioplayers: ^6.1.0
@@ -54,15 +51,8 @@ flutter:
 flutter_launcher_icons:
   android: 'launcher_icon'
   ios: true
-  remove_alpha_ios: true
   image_path: 'assets/images/my_alarm_icon.png'
   min_sdk_android: 24
   adaptive_icon_background: '#ffffff'
-  adaptive_icon_foreground: 'assets/images/my_alarm_icon.png'
-
-flutter_native_splash:
-  image: assets/images/my_alarm_icon.png
-  color: '#ffffff'
-  android: true
-  ios: true
-  web: false
+  adaptive_icon_foreground_inset: 24
+  adaptive_icon_monochrome: 'assets/images/my_alarm_icon_monochrome.png'
