feat(build): update build configuration for Android and iOS

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,8 +6,6 @@ permissions:
 on:
   pull_request:
   push:
-  release:
-    types: [ published ]
 
 jobs:
   build-android:
@@ -43,43 +41,18 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-pub-
 
-
       - run: flutter pub get
-      - run: flutter build apk --debug --split-per-abi --no-pub
+      - run: flutter build apk --debug --no-pub
 
-      - name: Rename APKs with version
-        run: |
-          for APK in build/app/outputs/flutter-apk/*.apk; do
-            mv "$APK" "${APK%.apk}-${{ github.ref_name }}.apk"
-          done
-
-      - name: Upload APKs
-        uses: actions/upload-artifact@v4
+  build-ios:
+    name: Build for iOS
+    runs-on: macos-latest
+    steps:
+      - uses: actions/checkout@v4
+      - name: Set up Flutter
+        uses: subosito/flutter-action@v2
         with:
-          name: alarms-android
-          path: build/app/outputs/flutter-apk/*.apk
-          compression-level: 0
-          retention-days: 7
-
-      - run: flutter build appbundle --debug --no-pub
-
-      - name: Upload release asset
-        if: github.event_name == 'release'
-        uses: softprops/action-gh-release@v2
-        with:
-          files: build/app/outputs/flutter-apk/*.apk
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-#  build-ios:
-#    name: Build for iOS
-#    runs-on: macos-latest
-#    steps:
-#      - uses: actions/checkout@v4
-#      - name: Set up Flutter
-#        uses: subosito/flutter-action@v2
-#        with:
-#          channel: 'stable'
-#          architecture: x64
-#      - run: flutter pub get
-#      - run: flutter build ios --release --no-pub --no-codesign
+          channel: 'stable'
+          architecture: x64
+      - run: flutter pub get
+      - run: flutter build ios --release --no-pub --no-codesign
